# space-telescope

./: .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  configuration.yaml  sqlx-data.json
.github/workflows/: rust.yml
configuration/: base.yaml
cosmodata/: .gitignore  README.md  pyproject.toml
cosmodata/scripts/: test.py
migrations/: 09-05-2023_create_render_jobs_table.sql  20230510040139_create_renders_table.sql
rendering/spark/: spark-submit.sh
rendering/spark/scripts/: test.py
scripts/: cargo_test_log.sh  init_db.sh  setup_local.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: health_check.rs  mod.rs  renders.rs
tests/: health_check.rs
