[package]
name = "space-telescope"
description = "Backend server for Space Telescope"
version = "0.1.0"
authors = ["Trevor Du <t34du@uwaterloo.ca>"]
license = "MIT"
edition = "2021"
rust-version = "1.68"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "space-telescope"

[dependencies]
actix-web = "4"
chrono = "0.4.15"
config = "0.11"
env_logger = "0.9"
nalgebra = { version = "0.32.2", features = ["serde-serialize"]}
serde = "1.0.162"
serde_json = "1.0"
secrecy = { version = "0.8", features = ["serde"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
tracing-actix-web = "0.7"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
utoipa = "3"
utoipa-swagger-ui = { version = "3", features = ["actix-web", "debug-embed"] }
uuid = { version = "0.8.1", features = ["v4"] }

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[dev-dependencies]
once_cell = "1"
reqwest = "0.11"
