[tool.poetry]
name = "spark"
version = "0.1.0"
description = "Pyspark scripts for handling point data"
authors = ["Trevor Du <trevorguanhaodu@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.10"
pyspark = "~3.3"
pandas = "~2.0"
venv-pack = "0.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[flake8]
max-line-length = "88"
extend-ignore = "E203"
